[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.1"
llama-index-llms-openai = "^0.2.0"
llama-index-readers-file = "^0.2.0"
octoai = "^1.6.0"
llama-index-llms-octoai = "^0.2.0"
llama-index-embeddings-octoai = "^0.2.0"
llama-index-embeddings-openai = "^0.2.3"
llama-index-llms-openai-like = "^0.2.0"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
